# easycomp

./: .gitignore  README.md
src/: CMakeLists.txt
src/easycomp/: main.cpp
src/prototypes/expression_performance/: genericexpressions.h  main.cpp  ooexpressions.h
src/tests/: README
